fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -356,6 +356,9 @@ html{
   margin-left: -2%;
   vertical-align: center;
 }
+#p2{
+  margin-right:4%;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
@@ -472,4 +475,5 @@ html{
 #clean{
   width:64%;
 }
+
 }
